# RM_hero_ctype-241124_-main

./: CMakeLists.txt  Makefile  README.md  stm32.jflash
.Doc/: 必须做&禁止做.md
.cache/clangd/index/: BMI088Middleware.c.9103C2FEF14B29CA.idx  BMI088Middleware.h.5A28E036DC93E355.idx  BMI088driver.c.7A8C9C2B11A0C8F9.idx  BMI088driver.h.2A51A616278F710E.idx  BMI088reg.h.BD383EC3BE8E3DC6.idx  FreeRTOS.h.8F2103778966C27F.idx  FreeRTOSConfig.h.7FBDFFA286297DD3.idx  HC05.c.CB3C10CAD1637047.idx  HC05.h.0AAA2F99E57BAACD.idx  HT04.c.18F33F8A5D0EE480.idx  HT04.h.9FCF6E544B1A0FA2.idx  LK9025.c.8DE5DE9E58950235.idx  LK9025.h.8898528CD24E2128.idx  QuaternionEKF.c.26EDAC9B494BCC27.idx  QuaternionEKF.h.65B42EC8DAF0C6EB.idx  SEGGER_RTT.c.35CF1F4016EF2C23.idx  SEGGER_RTT.h.15F0FCD84A295FDA.idx  SEGGER_RTT_ASM_ARMv7M.s.B7B3717358F3B64A.idx  SEGGER_RTT_Conf.h.F36A11E4EA99FC5E.idx  SEGGER_RTT_printf.c.2EC1BF8749B823D9.idx  adc.c.188F37644F2EA78C.idx  adc.h.F103DB8459AE9883.idx  arm_math.h.51E4617B12C39845.idx  bmi088.c.29FA323A1B162753.idx  bmi088.h.A1FC1D41FFC543D1.idx  bmi088_regNdef.h.0985D6995D7EC1B4.idx  bsp_adc.c.B4761320A9489C0F.idx  bsp_can.c.B552EAF4BEC632C7.idx  bsp_can.h.89B28E0302A7C562.idx  bsp_dwt.c.D65183DBC9D47829.idx  bsp_dwt.h.165B7CA0966A0BFF.idx  bsp_flash.c.100365F434139710.idx  bsp_flash.h.1A0EB138502C2A0C.idx  bsp_gpio.c.C75564FF860A7A62.idx  bsp_gpio.h.36C06C1035E175D3.idx  bsp_iic.c.C24EE677F5AD8DDE.idx  bsp_iic.h.9FDE0F4281CF20E2.idx  bsp_init.h.AAE36010DE5FCB72.idx  bsp_log.c.5E9E758A1AD8E0EE.idx  bsp_log.h.833A58D5C9A6DD71.idx  (+234 more)
application/: robot.c  robot_def.h
application/chassis/: chassis.c  chassis.md  chassis_power_control.c  chassis_power_control.h
application/cmd/: robot_cmd.c
application/gimbal/: gimbal.c
application/shoot/: shoot.c
bsp/log/: bsp_log.c  bsp_log.h
bsp/usb/: bsp_usb.c  bsp_usb.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
modules/algorithm/: controller.c  controller.h
modules/buffer/: buffer.c  buffer.h
modules/imu/: BMI088driver.c  ins_task.c
modules/master_machine/: master_process.c  master_process.h  seasky_protocol.c  seasky_protocol.h
modules/motor/: motor_def.c  motor_def.h
modules/motor/DJImotor/: dji_motor.c  dji_motor.h
modules/motor/servo_motor/: servo_motor.h
modules/referee/: referee_protocol.h  referee_task.c  rm_referee.h
modules/super_cap/: super_cap.c  super_cap.h
